Add helper function for rendering html template using string substitution

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     volumes:
       - ./recipeIn.csv:/app/recipeIn.csv
       - ./recipeOut.csv:/app/recipeOut.csv
+      - ./templates:/app/templates
     stdin_open: true
     tty: true
 
